tests/error/override_confict.gw
#! [contains] conflicts with previously defined value
class C
{
	var int test;
}

class D extends C
{
	fun void test() {}
}

var C c;
var D d;
<<< c >>>;
<<< d >>>;
